
_____________________________________________________________________________________________________


CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2019 MAR 22a
  * in model/chem/*/chem.c
    - changed #define TOWNSEND_IMPLICIT TRUE to #define TOWNSEND_IMPLICIT FALSE


2019 MAR 19a
  * in model/fluid/_*_plasma/fluid.c
    - in write_model_fluid_template(), added emfieldfact=1.0;
    - in read_model_fluid_actions(), added read of emfieldfact
  * in model/fluid/_*_plasma/fluid.hh
    - in gl_model_fluid_t, added emfieldfact
  * in model/fluid/_*_plasma/fluid_source.c
    - in find_Semfield(), multiplied Femfield, E_dot_J and _zetav_from_Te by emfieldfact


2019 MAR 15a
  * in bin
    - updated reentry.wrp and reentry_sheath.wrp


2019 MAR 14a
  * in lib/exm/exm.c
    - added EXM_invert_matrix_partial_pivoting()
  * in CONTRIB
    - added contributions by Jaehyuk Lee


2019 MAR 11a
  * in bin
    - improved Keller-Kloker.wrp


2019 MAR 09b
  * in bin
    - modified Keller-Kloker.wrp


2019 MAR 09a
  * in bin
    - added Keller-Kloker.wrp


2019 MAR 08b
  * in bin
    - modified carbuncle.wrp and ns_SDBD.wrp


2019 MAR 08a
  * in cycle/resconv/_MUSCL+/resconv.c
    - removed FLUX_FDSplusFilterMultiD in read_disc_resconv_actions(), find_Fstar_interface() 
      (not used anymore; replaced by multidimensonal positivity-preserving eigenvalue conditioning)
  * in cycle/share/res_share.c
    - removed filter_Fstar_interface_positivity_preserving_MultiD()
      (not used anymore; replaced by multidimensonal positivity-preserving eigenvalue conditioning)
  * in model/fluid/_*/fluid_conv.c and model/fluid/_drift-diffusion/fluid.c
    - deleted find_M_from_jacvars(), find_Minv_from_jacvars(), find_MUstar_from_jacvars()
      (not used anymore; replaced by multidimensonal positivity-preserving eigenvalue conditioning)
  * in model/share/fluid_share.c