@@ -7,6 +7,15 @@ CFDWARP CHANGELOG
 _____________________________________________________________________________________________________
 
 
+2019 MAR 22b
+  * in tools
+    - added average.sh from Prasanna
+  * in tools/README
+    - added description of average.sh
+  * in CONTRIB
+    - added contribution by Prasanna
+
+
 2019 MAR 22a
   * in model/chem/*/chem.c
     - changed #define TOWNSEND_IMPLICIT TRUE to #define TOWNSEND_IMPLICIT FALSE
